# opencv-ts-webgpu

./: .gitattributes  .gitignore  AGENTS.md  PLAN.md  README.md  biome.json  package-lock.json  package.json  tsconfig.json  vite.config.pages.ts  vite.config.ts  vitest.config.ts  wgsl.d.ts
demo/: index.html  main-offline.ts  main.ts  phase-blazepose.html  phase-midas-pointcloud.html  phase-tf-optimizer.html  phase0.html  phase1.html  phase1b-romp.html  phase2.html  phase2b.html  phase3.html  phase3c.html  phase4.html  secure-context.ts
demo-webapp/: package.json  server.js
demo-webapp/public/: index.html
demo/josh/: config.ts  pipeline.ts
demo/realtime/: depth-renderer.ts  loading-status.ts  skeleton-renderer.ts  video-source.ts
demo/smpl/: README.md
demo/ui/: controls.ts  viewer-3d.ts
scripts/: README-models.md  convert-smpl.py  export-mast3r.py  export-romp.py
src/: index.ts
src/backends/: interface.ts
src/core/: buffer-manager.ts  dimensions.ts  errors.ts  index.ts  mat.ts  resource-tracker.ts  tensor.ts  types.ts
src/graph/: compiler.ts  edge.ts  executor.ts  graph.ts  index.ts  node.ts  scheduler.ts
src/kernels/: registry.ts
src/video/: double-buffer.ts  frame-source.ts  index.ts
tests/josh/: blazepose-romp.test.ts  gradient-validation.test.ts  midas-pointcloud.test.ts  phase1-nodes.test.ts  phase1-utils.test.ts  phase2-utils.test.ts  rodrigues-deriv.test.ts  tf-losses.test.ts  tf-smpl-forward.test.ts
tests/realtime/: depth-renderer.test.ts  skeleton-renderer.test.ts
wasm/: Cargo.toml
wasm/src/: contact.rs  lbfgs.rs  lib.rs
(+100 files in other folders)
