[package]
name = "opencv-ts-wasm"
version = "0.1.0"
edition = "2021"
description = "WASM kernels for OpenCV.ts 5.0 — L-BFGS optimizer and contact constraints"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }

[profile.release]
opt-level = 3
lto = true
wasm-opt = ["-O4"]
