[package]
name = "opencv-ts-wasm"
version = "0.1.0"
edition = "2021"
description = "WASM kernels for OpenCV.ts 5.0 — L-BFGS optimizer and contact constraints"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "=0.2.100"
js-sys = "=0.3.77"
web-sys = { version = "=0.3.77", features = ["console"] }

[profile.release]
opt-level = 3
lto = true
wasm-opt = ["-O4"]
